--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "license": "MIT",
   "devDependencies": {
     "body-parser": "^1.14.1",
+    "browser-sync": "^2.17.2",
     "express": "^4.13.3",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.3.2",
     "lodash": "^3.10.1",
     "websocket": "^1.0.22"
   }
