--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "project.server",
+  "name": "ng-classifieds",
   "version": "1.0.0",
-  "description": "Server for graded assignment.",
-  "main": "server.js",
+  "description": "ngscotch",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Tadeusz Makuch",
-  "license": "MIT",
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
+    "angular-ui-router": "^0.3.1",
     "body-parser": "^1.14.1",
     "browser-sync": "^2.17.2",
     "express": "^4.13.3",
     "gulp": "^3.9.1",
     "gulp-sass": "^2.3.2",
-    "lodash": "^3.10.1",
+    "lodash": "^4.16.4",
     "websocket": "^1.0.22"
   }
 }
